network/xray/httproute-protected/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: 3xui-protected
spec:
  hostnames:
  - x-panel-a.suffix-automatic-replace
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateways
    name: main-protected
    sectionName: https-main
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: s3xui
      port: 2053
      weight: 1
